# databricks-project-scrapper

./: .gitignore  FLIGHT_CHECKPOINTING_README.md  Makefile  README.md  SHIPPING_MATRIX_README.md  aggregate_flight_data.py  check_checkpoint.py  check_progress.py  convert_checkpoint_to_excel.py  demo_matrix_scraper.py  freightos_progress_check.py  landing-page.html  manage.py  manual_save_progress.py  parallel_demo.py  pyproject.toml  run_bs_scrape.py  run_full_flight_matrix.py
app/: freightos_matrix_runner.py  main.py  matrix_flight_scraper.py  shipping_matrix_runner.py  tasks.py  test.py
app/providers/: booking_provider.py  booking_utils.py  flight_quote_model.py  flight_search.py  freightos_search.py  kiwi_provider.py  kiwi_utils.py
app/providers/flights_matrix/: flight_search.py  matrix_flight_scraper.py
app/providers/flights_matrix/booking/: booking_provider.py  booking_utils.py
app/providers/flights_matrix/kiwi/: kiwi_provider.py  kiwi_utils.py
app/utils/: checkpoint_manager.py  city_point_dict.py  city_regional_mapping.py  flight_checkpoint_manager.py  flight_data_aggregator.py  freightos_locations.py  helpers.py  model.py  progress_reporter.py
frontend/: .dockerignore  Dockerfile  README.md  SHIPPING_FRONTEND_README.md
frontend/src/: App.tsx
frontend/src/components/: AnalyticsDashboard.tsx  CostMatrix.tsx  CostVisualization.tsx  EvidencePanel.tsx  FlightResults.tsx  FlightSearchForm.tsx  MobilityDashboard.tsx  RecentSearches.tsx  SearchDetails.tsx  ShippingMatrixDashboard.tsx  ShippingRouteDetails.tsx  SimpleShippingTable.tsx
frontend/src/lib/: mobility-data.ts  shipping-data.ts  shipping-utils.ts
frontend/src/pages/: Index.tsx  ShippingMatrix.tsx
frontend/src/types/: mobility.ts  shipping.ts
frontend_app/: index.html
frontend_app/src/components/: CostMatrix.tsx  MobilityDashboard.tsx  ScreenshotGallery.tsx
frontend_app/src/lib/: api.ts  mobility-data.ts
frontend_app/src/pages/: Index.tsx
frontend_app/src/scripts/: generate-static-flight-data.ts
frontend_app/src/types/: mobility.ts
frontend_app/src/utils/: flight-data-processor.ts  shipping-data-processor.ts
